--- a/webgl.html
+++ b/webgl.html
@@ -2,52 +2,35 @@
 <html lang="en">
 
 <head>
-    <title>JLK's web page</title>
-    <link rel="stylesheet" type="text/css" href="css/responsive_sm.css" />
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" type="text/css" href="css/default.css" />
+    <link rel="stylesheet" type="text/css" href="css/responsive_sm.css" />
+    <link rel="stylesheet" type="text/css" href="css/responsive_md.css" />
+    <link rel="stylesheet" type="text/css" href="css/responsive_lg.css" />
+
+    <title>JLK's web page</title>
 </head>
 
 <body>
 
     <header>
         <h1>JLK's web page</h1>
-        <nav>
-            <a href="http://www.umich.edu/">University of Michigan</a>
-            <a href="http://www.intro-webdesign.com/">Intro to Web Design</a>
+        <nav role="navigation">
+            <div id="dd-imgcontainer">
+                <img src="assets/reorder-three.svg" / id="dd-img">
+            </div>
+            <div id="dd-content">
+                <a href="index.html">Home</a>
+                <a href="imgs.html">Image Showcase</a>
+                <a href="d3.html">Javascript Showcase</a>
+                <a href="webgl.html" class="current">WebGL Showcase</a>
+                <a href="credits.html">Licensing Credits</a>
+            </div>
         </nav>
     </header>
 
-    <!-- <section id="left">
-        <h2>Why I am taking this class</h2>
-        <ol>
-            <li>It is required.</li>
-            <li>I already know it, easy A!</li>
-            <li>My mom wants a webpage.</li>
-        </ol>
-    </section>
-
-    <section id="center">
-        <h2>Why I am at University of Michigan</h2>
-        <div class="myClass">
-            <h3> Ann Arbor</h3>
-            <p>There are many excellent reason to attend the <a href="umich.edu">University of Michigan</a>. The
-                academics are top-notch, the students are exceptionally good-looking, and for about six weeks out of the
-                year the weather is almost pleasant.</p>
-        </div>
-
-        <div>
-            <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTzDojh5E0fzvTg4nWYs0JadpTwcS2S1KHOtnVQnlruNqmNvfIk"
-                alt="Football">
-
-            <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTO8WIJ5ygVENopHPC5Op9z4ua-MoGD-LoUZuEd6vdL-EMro28CWw"
-                alt="Solar Car">
-
-            <img src="http://www-personal.umich.edu/~jensenl/visuals/album/annarbor/IMG_1051.jpg" alt="campus">
-
-            <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTzDojh5E0fzvTg4nWYs0JadpTwcS2S1KHOtnVQnlruNqmNvfIk"
-                alt="Football">
-        </div>
-    </section> -->
 
     <footer>
         <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated.</p>
