--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
         </nav>
     </header>
 
+    <main>
+        <section>
+            
+        </section>
+    </main>
+
 
     <footer>
         <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated.</p>
