begin section, add license

--- a/credits.html
+++ b/credits.html
@@ -31,9 +31,9 @@
         </nav>
     </header>
 
-
     <footer>
-        <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated.</p>
+        <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated in the Licensing Credits
+            section.</p>
     </footer>
 
 </body>
