--- a/index.html
+++ b/index.html
@@ -31,15 +31,20 @@
         </nav>
     </header>
 
-    <main>
-        <section>
-            
-        </section>
-    </main>
+    <section>
+        <h1>Welcome</h1>
+        <p> This site is a portfolio website written for the Coursera course 
+            <a href="https://www.coursera.org/learn/web-design-project">'Web 
+            Design for Everybody Capstone'</a>.
+
+
+
+        </p>
+    </section>
 
 
     <footer>
-        <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated.</p>
+        <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated in the Licensing Credits section.</p>
     </footer>
 
 </body>
