--- a/imgs.html
+++ b/imgs.html
@@ -33,7 +33,8 @@
 
 
     <footer>
-        <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated.</p>
+        <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated in the Licensing Credits
+            section.</p>
     </footer>
 
 </body>
