--- a/index.html
+++ b/index.html
@@ -33,13 +33,100 @@
 
     <section>
         <h1>Welcome</h1>
-        <p> This site is a portfolio website written for the Coursera course 
-            <a href="https://www.coursera.org/learn/web-design-project">'Web 
-            Design for Everybody Capstone'</a>.
-
-
-
+        <p>
+           This site is a portfolio website written for the Coursera course 
+           <a href="https://www.coursera.org/learn/web-design-project">Web 
+           Design for Everybody Capstone</a>. It is intended to be responsive
+           and accessible.
         </p>
+        
+        <p>
+           The <a href="imgs.html">Image Showcase</a> page features a responsive
+           image gallery with a selection of images from Wikipedia. The <a href=
+           "d3.html">Javascript Showcase</a> features an interactive SVG canvas 
+           developed using the Javscript library <a href="https://d3js.org/">
+           D3.js</a>. The <a href="webgl.html">WebGL Showcase</a> is a simple version
+           of <a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life"> 
+           Conway's Game of Life</a> rendered on your graphics card using <a href=
+           "https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API">WebGL</a>.
+           Lastly, the <a href="credits.html">Licensing Credits</a> is a listing
+           of all external code/images used in this website and their associated
+           licensing information.
+        </p>
+    </section>
+
+    <section>
+        <h1>Page Requirements</h1>
+        <ul>
+            <li>
+                Must have at least three "pages." These can can be three different 
+                html files, or one file that links to all three "pages".
+            </li>
+            <li>
+                Each page must have at least two semantic tags (header, nav, footer, etc).
+            </li>
+            <li>
+                Each page must validate at validator.w3.org.
+            </li>
+            <li>
+                Each page must be responsive -- there must be at least two unique views.
+            </li>
+            <li>
+                You must have at least 4 images on one of your pages. (If this requirement
+                doesn't "fit" your portfolio plan, please just make an extra page that 
+                fulfills it. You can always unlink it after you have been peer -graded.
+            </li>
+            <li>
+                Each page must be styled. The goal is not to impress, but to show competence.
+                So add enough to show that you know how to write CSS rules. But peer-review
+                with the knowledge that not everything will be beautiful.
+            </li>
+        </ul>
+    </section>
+
+    <section>
+        <h1>Grading Rubric</h1>
+        <h2>Click to expand full points scheme.</h2>
+        <details>
+            <summary>Does the site validate?</summary>
+            <ul>
+                <li>10pts – Fully validates (warnings are fine).</li>
+                <li>8 pts – There are errors, but the student has shown (in their write-up
+                    or video) that they are caused by plugins and can not be fixed.</li>
+                <li>6 pts – There are at most 3 errors for the entire site.</li>
+                <li>3pts – They have only shown that part of the site validates. 
+                    (For instance, only tested one of the files in a multi-file site.)</li>
+                <li>0 pts – More than three errors were left or the site was not tested at all.</li>
+            </ul>
+        </details>
+        <details>
+            <summary>Is the site responsive?</summary>
+            <ul>
+                <li>20pts – Yes, the site has a unique look/layout for each of the views.</li>
+                <li>10pts – The site has a unique look, but not a unique layout. (For example, 
+                    they changed only colors of fonts, not the actual layout.) </li>
+                <li>6pts – Only some of the pages are responsive - not all of them.</li>
+                <li>0pts – The site is not responsive.</li>
+            </ul>
+        </details>
+        <details>
+            <summary>Is the site well-styled?</summary>
+            <p>This is very subjective. It should be difficult to score a high score,
+            but not difficult to receive the majority of the points. It is
+            important that everyone create a unique style sheet, even if using a
+            template or framework. Look for feedback in Week Five to improve your
+            score.</p>
+            <ul>
+                <li>10pts – The site is incredibly well-styled and the author went
+                beyond the required (animation, hovering, etc done with CSS).</li>
+                <li>8pts – The site is very well-styled. The content has a layout that
+                is easy to follow and a variety of colors and fonts were used. --
+                Most students can expect to receive this score.</li>
+                <li>4pts – The styling is lacking or the author relied almost
+                exclusively on a template/framework.</li>
+                <li>0pts – Less than 9 unique CSS rules were used.</li>
+            </ul>
+        </details>
     </section>
 
 
