index complete - height gradient fix

--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
         <details>
             <summary>Does the site validate?</summary>
             <ul>
-                <li>10pts – Fully validates (warnings are fine).</li>
+                <li>10 pts – Fully validates (warnings are fine).</li>
                 <li>8 pts – There are errors, but the student has shown (in their write-up
                     or video) that they are caused by plugins and can not be fixed.</li>
                 <li>6 pts – There are at most 3 errors for the entire site.</li>
-                <li>3pts – They have only shown that part of the site validates. 
+                <li>3 pts – They have only shown that part of the site validates. 
                     (For instance, only tested one of the files in a multi-file site.)</li>
                 <li>0 pts – More than three errors were left or the site was not tested at all.</li>
             </ul>
@@ -102,11 +102,11 @@
         <details>
             <summary>Is the site responsive?</summary>
             <ul>
-                <li>20pts – Yes, the site has a unique look/layout for each of the views.</li>
-                <li>10pts – The site has a unique look, but not a unique layout. (For example, 
+                <li>20 pts – Yes, the site has a unique look/layout for each of the views.</li>
+                <li>10 pts – The site has a unique look, but not a unique layout. (For example, 
                     they changed only colors of fonts, not the actual layout.) </li>
-                <li>6pts – Only some of the pages are responsive - not all of them.</li>
-                <li>0pts – The site is not responsive.</li>
+                <li>6 pts – Only some of the pages are responsive - not all of them.</li>
+                <li>0 pts – The site is not responsive.</li>
             </ul>
         </details>
         <details>
@@ -117,18 +117,44 @@
             template or framework. Look for feedback in Week Five to improve your
             score.</p>
             <ul>
-                <li>10pts – The site is incredibly well-styled and the author went
+                <li>10 pts – The site is incredibly well-styled and the author went
                 beyond the required (animation, hovering, etc done with CSS).</li>
-                <li>8pts – The site is very well-styled. The content has a layout that
+                <li>8 pts – The site is very well-styled. The content has a layout that
                 is easy to follow and a variety of colors and fonts were used. --
                 Most students can expect to receive this score.</li>
-                <li>4pts – The styling is lacking or the author relied almost
+                <li>4 pts – The styling is lacking or the author relied almost
                 exclusively on a template/framework.</li>
-                <li>0pts – Less than 9 unique CSS rules were used.</li>
+                <li>0 pts – Less than 9 unique CSS rules were used.</li>
             </ul>
         </details>
+        <details>
+            <summary>Enhancements</summary>
+            <p>You need to add four elements to your site that are unique –
+            something beyond what we did in the four previous courses. You are
+            encouraged to be as creative as you would like (and creative does not
+            need to mean time-intensive). Some options for these "extras"
+            include:</p>
+            <ul>
+                <li>Add custom JavaScript (e.g. incorporate dynamic content, use JS
+                to perform verification, modify the DOM).</li>
+                <li>Enhance the accessibility of your page (e.g. put your site
+                through the some subset of the WebAim quick evaluation reference -
+                http://webaim.org/resources/evalquickref/).</li>
+                <li>Incorporate plugins (e.g. Google Calendar, a map, parallax, etc.)
+                You will need to show what you did other than just copying code. Did
+                you need to change any of the attributes? Change any of the links?</li>
+                <li>Include a Carousel for your images (don't forget to turn off the
+                automatic start feature if you can!)</li>
+                <li>Use a sticky footer to create a consistent look across different
+                browser heights (we usually only consider widths…)</li>
+                <li>Add a third viewport layout (e.g. a table view that is different
+                than mobile or large-screen).</li>
+            </ul>
+            <p>Again, these are just suggestions, please feel free to let your own
+            creativity be your guide.</p>
+            <p>Each extra will be worth 10 pts, for a total of 40 pts.</p>
+        </details>
     </section>
-
 
     <footer>
         <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated in the Licensing Credits section.</p>
