--- a/imgs.html
+++ b/imgs.html
@@ -8,34 +8,37 @@
     <link rel="stylesheet" type="text/css" href="css/default.css" />
     <link rel="stylesheet" type="text/css" href="css/responsive_sm.css" />
     <link rel="stylesheet" type="text/css" href="css/responsive_md.css" />
-    <link rel="stylesheet" type="text/css" href="css/responsive_lg.css" />
+
+    <script src="js/utility.js"></script>
 
     <title>JLK's web page</title>
 </head>
 
 <body>
 
-    <header>
-        <h1>JLK's web page</h1>
-        <nav role="navigation">
-            <div id="dd-imgcontainer">
-                <img src="assets/reorder-three.svg" / id="dd-img">
-            </div>
-            <div id="dd-content">
-                <a href="index.html">Home</a>
-                <a href="imgs.html" class="current">Image Showcase</a>
-                <a href="d3.html">Javascript Showcase</a>
-                <a href="webgl.html">WebGL Showcase</a>
-                <a href="credits.html">Licensing Credits</a>
-            </div>
-        </nav>
-    </header>
+    <div class="main-container">
+        <header>
+            <h1>JLK's web page</h1>
+            <nav role="navigation">
+                <div id="dd-imgcontainer">
+                    <img src="assets/reorder-three.svg" / id="dd-img">
+                </div>
+                <div id="dd-content">
+                    <a href="index.html">Home</a
+                    ><a href="imgs.html" class="current">Image Showcase</a
+                    ><a href="d3.html">Javascript Showcase</a
+                    ><a href="webgl.html">WebGL Showcase</a
+                    ><a href="credits.html">Licensing Credits</a>
+                </div>
+            </nav>
+        </header>
 
 
-    <footer>
-        <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated in the Licensing Credits
-            section.</p>
-    </footer>
+        <footer>
+            <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated in the Licensing Credits
+                section.</p>
+        </footer>
+    </div>
 
 </body>
 
