--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" type="text/css" href="css/default.css" />
     <link rel="stylesheet" type="text/css" href="css/responsive_sm.css" />
     <link rel="stylesheet" type="text/css" href="css/responsive_md.css" />
-    <link rel="stylesheet" type="text/css" href="css/responsive_lg.css" />
 
+    <script src="js/utility.js"></script>
+    
     <title>JLK's web page</title>
 </head>
 
 <body>
-
+    
+    <div class="main-container">
     <header>
         <h1>JLK's web page</h1>
         <nav role="navigation">
@@ -22,11 +24,11 @@
                 <img src="assets/reorder-three.svg" / id="dd-img">
             </div>
             <div id="dd-content">
-                <a href="index.html" class="current">Home</a>
-                <a href="imgs.html">Image Showcase</a>
-                <a href="d3.html">Javascript Showcase</a>
-                <a href="webgl.html">WebGL Showcase</a>
-                <a href="credits.html">Licensing Credits</a>
+                <a href="index.html" class="current">Home</a
+                ><a href="imgs.html">Image Showcase</a
+                ><a href="d3.html">Javascript Showcase</a
+                ><a href="webgl.html">WebGL Showcase</a
+                ><a href="credits.html">Licensing Credits</a>
             </div>
         </nav>
     </header>
@@ -74,7 +76,7 @@
             <li>
                 You must have at least 4 images on one of your pages. (If this requirement
                 doesn't "fit" your portfolio plan, please just make an extra page that 
-                fulfills it. You can always unlink it after you have been peer -graded.
+                fulfills it. You can always unlink it after you have been peer-graded.)
             </li>
             <li>
                 Each page must be styled. The goal is not to impress, but to show competence.
@@ -159,6 +161,7 @@
     <footer>
         <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated in the Licensing Credits section.</p>
     </footer>
+    </div>
 
 </body>
 
