image gallery progress

--- a/imgs.html
+++ b/imgs.html
@@ -33,6 +33,33 @@
             </nav>
         </header>
 
+        <section class="imgsection">
+            <h1>Image Showcase: Boxing Legends</h1>
+            <div class="imgshowcase">
+
+                <figure id="imgfig">
+                    <img src="assets/boxer_joelouis_fight.jpg" alt="Joe Louis vs. Max Schmeling"/>
+                    <figcaption>Joe Louis and Max Schmeling fight for the first time, 1936</figcaption>
+                </figure>
+
+                <div id="imgnav">
+                    <figure class="imgnavbuttons" id="figbackbutton">
+                        <img src="assets/arrow-back.svg" alt="Previous image"/>
+                        <figcaption>Previous</figcaption>
+                    </figure>
+
+                    <figure class="imgnavbuttons" id="figfullscreen">
+                        <img src="assets/expand.svg" alt="Fullscreen" />
+                        <figcaption>Fullscreen</figcaption>
+                    </figure>
+
+                    <figure class="imgnavbuttons" id="figforwardbutton">
+                        <img src="assets/arrow-forward.svg" alt="Next image" />
+                        <figcaption>Next</figcaption>
+                    </figure>
+                </div>
+            </div>
+        </section>
 
         <footer>
             <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated in the Licensing Credits
