progress on img gallery

--- a/imgs.html
+++ b/imgs.html
@@ -38,8 +38,11 @@
             <div class="imgshowcase">
 
                 <figure id="imgfig">
-                    <img src="assets/boxer_joelouis_fight.jpg" alt="Joe Louis vs. Max Schmeling"/>
-                    <figcaption>Joe Louis and Max Schmeling fight for the first time, 1936</figcaption>
+                    <!-- <img src="assets/boxer_joelouis_fight.jpg" alt="Joe Louis vs. Max Schmeling"/> -->
+                    <!-- <img src="assets/boxer_joelouis_friends.jpg" alt="Joe Louis and Max Schmeling as friends years later"/> -->
+                    <img id="imgimg" src="assets/boxer_jackdempsey.jpg" alt="Jack Dempsey"/>
+                    <!-- <img src="assets/boxer_sugarray.jpg" alt="Joe Louis vs. Max Schmeling"/> -->
+                    <figcaption id="imgfigcaption">Joe Louis and Max Schmeling fight for the first time, 1936</figcaption>
                 </figure>
 
                 <div id="imgnav">
@@ -60,6 +63,8 @@
                 </div>
             </div>
         </section>
+
+        <script src="js/imgnav.js"></script>
 
         <footer>
             <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated in the Licensing Credits
