--- a/imgs.html
+++ b/imgs.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/responsive_md.css" />
 
     <script src="js/utility.js"></script>
+    <script src="js/imgnav.js" defer></script>
 
     <title>JLK's web page</title>
 </head>
@@ -38,10 +39,7 @@
             <div class="imgshowcase">
 
                 <figure id="imgfig">
-                    <!-- <img src="assets/boxer_joelouis_fight.jpg" alt="Joe Louis vs. Max Schmeling"/> -->
-                    <!-- <img src="assets/boxer_joelouis_friends.jpg" alt="Joe Louis and Max Schmeling as friends years later"/> -->
-                    <img id="imgimg" src="assets/boxer_jackdempsey.jpg" alt="Jack Dempsey"/>
-                    <!-- <img src="assets/boxer_sugarray.jpg" alt="Joe Louis vs. Max Schmeling"/> -->
+                    <img src="assets/boxer_joelouis_fight.jpg" alt="Joe Louis and Max Schmeling fight for the first time, 1936" id="imgimg"/>
                     <figcaption id="imgfigcaption">Joe Louis and Max Schmeling fight for the first time, 1936</figcaption>
                 </figure>
 
@@ -64,7 +62,7 @@
             </div>
         </section>
 
-        <script src="js/imgnav.js"></script>
+
 
         <footer>
             <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated in the Licensing Credits
