--- a/imgs.html
+++ b/imgs.html
@@ -39,25 +39,25 @@
             <div class="imgshowcase">
 
                 <figure id="imgfig">
-                    <img src="assets/boxer_joelouis_fight.jpg" alt="Joe Louis and Max Schmeling fight for the first time, 1936" id="imgimg"/>
-                    <figcaption id="imgfigcaption">Joe Louis and Max Schmeling fight for the first time, 1936</figcaption>
+                    <img src="data:," alt="Init null image" id="imgimg"/>
+                    <figcaption id="imgfigcaption">Init null image</figcaption>
                 </figure>
 
                 <div id="imgnav">
-                    <figure class="imgnavbuttons" id="figbackbutton">
-                        <img src="assets/arrow-back.svg" alt="Previous image"/>
-                        <figcaption>Previous</figcaption>
-                    </figure>
+                    <button type="button" class="imgnavbuttons" id="figbackbutton">
+                        <img src="assets/arrow-back.svg" />
+                        Previous
+                    </button>
 
-                    <figure class="imgnavbuttons" id="figfullscreen">
-                        <img src="assets/expand.svg" alt="Fullscreen" />
-                        <figcaption>Fullscreen</figcaption>
-                    </figure>
+                    <button type="button" class="imgnavbuttons" id="figfullscreen">
+                        <img src="assets/expand.svg" />
+                        Fullscreen
+                    </button>
 
-                    <figure class="imgnavbuttons" id="figforwardbutton">
-                        <img src="assets/arrow-forward.svg" alt="Next image" />
-                        <figcaption>Next</figcaption>
-                    </figure>
+                    <button type="button" class="imgnavbuttons" id="figforwardbutton">
+                        <img src="assets/arrow-forward.svg" />
+                        Next
+                    </button>
                 </div>
             </div>
         </section>
