img gallery done for now

--- a/imgs.html
+++ b/imgs.html
@@ -38,10 +38,13 @@
             <h1>Image Showcase: Boxing Legends</h1>
             <div class="imgshowcase">
 
-                <figure id="imgfig">
+                <div id="imgfig">
                     <img src="data:," alt="Init null image" id="imgimg"/>
-                    <figcaption id="imgfigcaption">Init null image</figcaption>
-                </figure>
+                </div>
+
+                <div id="imgfigcaption">
+                    <p>Init null image</p>
+                </div>
 
                 <div id="imgnav">
                     <button type="button" class="imgnavbuttons" id="figbackbutton">
@@ -61,8 +64,6 @@
                 </div>
             </div>
         </section>
-
-
 
         <footer>
             <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated in the Licensing Credits
