--- a/imgs.html
+++ b/imgs.html
@@ -12,7 +12,7 @@
     <script src="js/utility.js"></script>
     <script src="js/imgnav.js" defer></script>
 
-    <title>JLK's web page</title>
+    <title>JLK's web page: Image Showcase</title>
 </head>
 
 <body>
