--- a/d3.html
+++ b/d3.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" type="text/css" href="css/responsive_md.css" />
 
     <script src="js/utility.js"></script>
+    <script src = "js/d3.v5.min.js"></script>
+    <script src = "js/networkgame.js" defer></script>
 
-    <title>JLK's web page</title>
+    <title>JLK's web page: Javascript Showcase</title>
 </head>
 
 <body>
@@ -33,6 +35,10 @@
             </nav>
         </header>
 
+        <section>
+            <h1>Javascript (D3.js) Showcase</h1>
+            <svg id="maincanvas"></svg>
+        </section>
 
         <footer>
             <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated in the Licensing Credits
