starting d3 in earnest

--- a/d3.html
+++ b/d3.html
@@ -35,9 +35,17 @@
             </nav>
         </header>
 
-        <section>
+        <section id="d3section">
             <h1>Javascript (D3.js) Showcase</h1>
-            <svg id="maincanvas"></svg>
+            <div id="canvasdiv">
+                <svg id="maincanvas">
+                    <g fill-opacity="0.7" stroke="black" stroke-width="0.1cm">
+                        <circle cx="6cm" cy="2cm" r="100" fill="red" transform="translate(0,50)" />
+                        <circle cx="6cm" cy="2cm" r="100" fill="blue" transform="translate(70,150)" />
+                        <circle cx="6cm" cy="2cm" r="100" fill="green" transform="translate(-70,150)" />
+                    </g>
+                </svg>
+            </div>
         </section>
 
         <footer>
