progress to real

--- a/index.html
+++ b/index.html
@@ -11,24 +11,23 @@
 
     <script src="js/utility.js"></script>
     
-    <title>JLK's web page</title>
+    <title>Ghost in the Machine - Jonathan Louis Kaplan</title>
 </head>
 
 <body>
     
     <div class="main-container">
     <header>
-        <h1>JLK's web page</h1>
+        <h1>Ghost in the Machine</h1>
         <nav role="navigation">
             <div id="dd-imgcontainer">
                 <img src="assets/reorder-three.svg" / id="dd-img">
             </div>
             <div id="dd-content">
-                <a href="index.html" class="current">Home</a
-                ><a href="imgs.html">Image Showcase</a
-                ><a href="d3.html">Javascript Showcase</a
-                ><a href="webgl.html">WebGL Showcase</a
-                ><a href="credits.html">Licensing Credits</a>
+                <a href="index.html" class="current">Latest Post</a
+                ><a href="archive.html">Post Archive</a
+                ><a href="pubs.html">Publications</a
+                ><a href="about.html">About</a>
             </div>
         </nav>
     </header>
@@ -159,7 +158,7 @@
     </section>
 
     <footer>
-        <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated in the Licensing Credits section.</p>
+        <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated.</p>
     </footer>
     </div>
 
