--- a/about.html
+++ b/about.html
@@ -26,17 +26,23 @@
                 <div id="dd-content">
                     <a href="index.html">Latest Post</a
                     ><a href="archive.html">Post Archive</a
-                    ><a href="pubs.html" class="current">Publications</a
-                    ><a href="about.html">About</a>
+                    ><a href="pubs.html">Publications</a
+                    ><a href="about.html" class="current">About</a>
                 </div>
             </nav>
         </header>
 
         <section>
-            <h1>Publications</h1>
-            <ul id="publist">
-                <li>test</li>
-            </ul>
+            <h1>About</h1>
+            <p>
+                I'm a programmer and musician who recently graduated with a PhD in Biomechanics. This is my personal site 
+                where I occasionally write about things I find interesting. 
+                You can find my <a href="https://www.linkedin.com/in/louis-kaplan/">LinkedIn profile here</a> and
+                my <a href="https://scholar.google.com/citations?user=_r3glgsAAAAJ&hl=en">Google Scholar page here</a>.
+            </p>
+            <p>
+                The title of this website is from the <a href="https://en.wikipedia.org/wiki/The_Ghost_in_the_Machine">book of the same name</a> by Arthur Koestler.
+            </p>
         </section>
 
         <footer>
