--- a/about.html
+++ b/about.html
@@ -35,10 +35,14 @@
         <section>
             <h1>About</h1>
             <p>
-                I'm a programmer and musician who recently graduated with a PhD in Biomechanics. This is my personal site 
-                where I occasionally write about things I find interesting. 
-                You can find my <a href="https://www.linkedin.com/in/louis-kaplan/">LinkedIn profile here</a> and
-                my <a href="https://scholar.google.com/citations?user=_r3glgsAAAAJ&hl=en">Google Scholar page here</a>.
+                I'm a programmer and musician who recently graduated with a PhD in Biomechanics from Cambridge University.
+                Before that I studied mechanical engineering at Manchester University. This is my personal site 
+                where I occasionally write about things I find interesting.
+            </p>
+            <p>
+                You can find my <a href="https://www.linkedin.com/in/louis-kaplan/">LinkedIn profile here</a>,
+                my <a href="https://scholar.google.com/citations?user=_r3glgsAAAAJ&hl=en">Google Scholar page here</a>,
+                and <a href="https://github.com/moustachio-belvedere">my GitHub page here</a>.
             </p>
             <p>
                 The title of this website is from the <a href="https://en.wikipedia.org/wiki/The_Ghost_in_the_Machine">book of the same name</a> by Arthur Koestler.
