--- a/pubs.html
+++ b/pubs.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="css/responsive_md.css" />
 
     <script src="js/utility.js"></script>
+    <script src="js/d3.v5.min.js"></script>
+    <script src="js/pubs.js" defer></script>
 
     <title>Ghost in the Machine - Jonathan Louis Kaplan</title>
 </head>
@@ -21,7 +23,7 @@
             <h1>Ghost in the Machine</h1>
             <nav role="navigation">
                 <div id="dd-imgcontainer">
-                    <img src="assets/reorder-three.svg" / id="dd-img">
+                    <img src="assets/reorder-three.svg" id="dd-img">
                 </div>
                 <div id="dd-content">
                     <a href="index.html">Latest Post</a
@@ -35,7 +37,6 @@
         <section>
             <h1>Publications</h1>
             <ul id="publist">
-                <li>test</li>
             </ul>
         </section>
 
