--- a/archive.html
+++ b/archive.html
@@ -24,8 +24,8 @@
                 <img src="assets/reorder-three.svg" / id="dd-img">
             </div>
             <div id="dd-content">
-                <a href="index.html" class="current">Latest Post</a
-                ><a href="archive.html">Post Archive</a
+                <a href="index.html">Latest Post</a
+                ><a href="archive.html" class="current">Post Archive</a
                 ><a href="pubs.html">Publications</a
                 ><a href="about.html">About</a>
             </div>
@@ -33,9 +33,9 @@
     </header>
 
     <section>
-        <h1 class="postheading">2020/09 - What I Like about Old Man and The Sea</h1>
+        <h1>Post Archive</h1>
         <p>
-            Coming soon.
+            No posts yet. Check back soon.
         </p>
 
     </section>
