--- a/pubs.html
+++ b/pubs.html
@@ -36,6 +36,10 @@
 
         <section>
             <h1>Publications</h1>
+
+            <p id="catlist">
+            </p>
+ 
             <ul id="publist">
             </ul>
         </section>
