sticky footer done

--- a/pubs.html
+++ b/pubs.html
@@ -39,16 +39,16 @@
 
             <p id="catlist">
             </p>
- 
+
             <ul id="publist">
             </ul>
         </section>
-
-        <footer>
-            <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated.</p>
-        </footer>
     </div>
 
+    <footer class="footer">
+        <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated.</p>
+    </footer>
+    
 </body>
 
 </html>
