--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
     </header>
 
     <section>
-        <h1 class="postheading">2020/09 - What I Like about Old Man and The Sea</h1>
+        <h1 class="postheading">2020/09 - What I Like about <i>Old Man and The Sea</i></h1>
         <p>
             Coming soon.
         </p>
 
     </section>
+    </div>
 
     <footer>
         <p>Code produced by Jonathan Louis Kaplan under MIT License unless otherwise stated.</p>
     </footer>
-    </div>
 
 </body>
 
